Add db interaction

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,39 @@
 spring.application.name=UniversityManagementSystem
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/university_management_system_db
+spring.datasource.username=postgres
+spring.datasource.password=yatsergray
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=false
+
+spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-version=0
+spring.flyway.locations=classpath:db/migration
+
+department.head.name.command.message=Who is the head of the department
+department.head.name.result.message=The head of the '%s' department is '%s'
+department.statistic.command.message=Show the statistics of the department
+department.statistic.result.message=Assistants - %d \nAssociate Professors - %d \nProfessors - %d
+department.average.salary.command.message=Show the average salary for the department
+department.average.salary.result.message=The average salary of the '%s' department is %s
+department.employee.count.command.message=Show the count of employees for the department
+department.employee.count.result.message=The count of employees for the '%s' department is %d
+lector.global.search.command.message=Global search by template
+lector.global.search.result.message=Results of the global search by '%s': \n%s
+department.name.input.message=Enter the name of the department:
+lector.name.template.input.message=Enter the name template for the lector:
+command.is.not.supported.message=Command is not supported
+
+welcome.university.management.system.message=Welcome to the University Management System!
+exiting.university.management.system.message=Exiting the University Management System. Goodbye!
+exit.command.message=exit
+choose.command.number.message=Choose a command number (type '%s' to quit):
+enter.command.number.message=Enter a command number:
+invalid.command.number.message=Invalid command number. Please try again
+invalid.input.message=Invalid input! Please enter a valid command number
+command.result.message=Command result:\n%s
+no.lectors.found=No lecturers were found matching the name template '%s'
+department.not.exist=The department '%s' does not exist
